[package]
name = "proxychains"
version = "0.1.0"
authors = ["farokh"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.5"
futures = "0.3.5"
tokio = { version = "0.2.22", features = ["full"] }

[lib]
name = "proxychains"
crate_type = ["dylib"]
