[package]
name = "proxychains"
version = "0.1.0"
authors = ["farokh"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.5"
futures = "0.3.5"
tokio = { version = "0.2.22", features = ["full"] }
socks5-async = "0.1.3"
serde = "1.0.97"
serde_derive = "1.0"
toml = "0.5.6"

[lib]
name = "proxychains"
crate_type = ["dylib"]
